2006-01-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-menus, vino, and gnome-media
	have been branched for gnome-2-12.

2006-01-13  Gabor Kelemen  <kelemeng@gnome.hu>

	* translation-status.xml: changed POT names: 
	  gnomemeeting POT name to ekiga.
 	  evolution-jescs POT name to contain version number 2.4.
 	  libgnomedb and libgda POT names tocontain version number 3.

2006-01-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gconf-editor and bug-buddy have
	been branched for gnome-2-12.

2006-01-06  Kjartan Maraas  <kmaraas@gnome.org>

	* translation-status.xml: Use HEAD for glib.

2006-01-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-system-tools has been branched for
	gnome-2-12.

2005-12-18  Abel Cheung  <maddog@linuxhall.org>

	* ignored-lang-list: Remove zh_HK, prepare to establish new team.

2005-12-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gedit has been branched for gnome-2-12.

2005-12-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gconf has been branched for gnome-2-12.

2005-12-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libgtop has been branched for gnome-2-12.

2005-12-05  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Corrected the POT name of
	gnome-power-manager.

2005-12-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved nautilus-actions to proposed.

2005-11-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added nautilus-actions.

2005-11-26  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Glade3 is being developed heavily.

2005-11-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: atk has been branched for gnome-2-12.

2005-11-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libwnck and gtksourceview have been
	branched for gnome-2-12.
