@@ -1742,9 +1742,9 @@
       </component>
     </version>
   </module>
-  <module name="gnomemeeting">
+  <module name="ekiga">
     <version release="gnome-2.12">
-      <component name="gnomemeeting" dir="gnomemeeting" group="desktop">
+      <component name="ekiga" dir="ekiga" group="desktop">
         <podir dir="po"/>
         <potname name="gnomemeeting.pot"/>
         <branch name="gnome-2-12"/>
@@ -1753,7 +1753,7 @@
       </component>
     </version>
     <version release="gnome-2.14">
-      <component name="gnomemeeting" dir="gnomemeeting" group="desktop">
+      <component name="ekiga" dir="ekiga" group="desktop">
         <podir dir="po"/>
         <potname name="ekiga.pot"/>
         <branch name="HEAD"/>
