@@ -1,3 +1,8 @@
+2006-01-20  Funda Wang  <fundawang@linux.net.cn>
+
+	* translation-status.xml: gnomemeeting has changed its cvs dir
+	to ekiga.
+	
 2006-01-14  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: gnome-menus, vino, and gnome-media
